# aoc

./: README.md  aoc.cabal  stack.yaml
src/: Main.hs  a10p1.hs  a10p2.hs  a11p1.hs  a11p2.hs  a12p1.hs  a12p2.hs  a13p1.hs  a13p2.hs  a14p1.hs  a14p2.hs  a15p1.hs  a15p2.hs  a16p1.hs  a16p2.hs  a1p1.hs  a1p2.hs  a2p1.hs  a2p2.hs  a3p1.hs  a3p2.hs  a4p1.hs  a4p2.hs  a5p1.hs  a5p2.hs  a6p1.hs  a6p2.hs  a7p1.hs  a7p2.hs  a8p1.hs  a8p2.hs  a9p1.hs  a9p2.hs
